[package]
name = "naumi"
authors = [ "Paradist" ]
version = "0.3.0"
description = "Lightweight and fast data transfer protocol. Fast de/serialization and tiny size!"
edition = "2021"
license = "MIT"
readme = "README.md"
keywords = ["protocol", "fast", "lightweight", "serialization", "deserialization"]
repository = "https://github.com/Paradist/naumi"
homepage = "https://github.com/Paradist/naumi"
categories = ["asynchronous", "data-structures", "encoding", "network-programming"]

exclude = [".idea", "benchmarks"]

[dependencies]
varint-simd = "0"
tokio = { version = "1", optional = true, features = ["rt-multi-thread", "io-util"]}
nmacro = "0.1.3"

[features]
debug = []
clone = []
default_ = []
partial_eq = []

net = []
net_async = ["tokio"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true

[profile.dev]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
